<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/lyAddFragment"
    tools:context=".presentation.add.BlogAddFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_500">
        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/imgSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:src="@drawable/ic_send"
            tools:ignore="ContentDescription"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/hint_title"
                app:helperText="@string/help_require"
                app:startIconDrawable="@drawable/ic_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/hint_author"
                app:helperText="@string/help_require"
                app:startIconDrawable="@drawable/ic_person"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/hint_date"
                app:helperText="@string/help_require"
                app:startIconDrawable="@drawable/ic_calendar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    tools:ignore="Autofill,LabelFor,TextContrastCheck,TextFields,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:hint="@string/hint_content"
                app:helperText="@string/help_require"
                app:startIconDrawable="@drawable/ic_notes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/etContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill,LabelFor,TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>